# ft_42run

./: .gitignore  API  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: Animation.hpp  Batch.hpp  Device.hpp  Input.hpp  Math.hpp  Mesh.hpp  SceneNode.hpp  pch.h
core/src/: Animation.cpp  Batch.cpp  Device.cpp  Input.cpp  Mesh.cpp  OpenGL.cpp  SceneNode.cpp  Texture.cpp  Utils.cpp
core_bk/: CMakeLists.txt
core_bk/include/: Batch.hpp  Core.hpp  Mesh.hpp  Utils.hpp
core_bk/src/: Animation.cpp  Batch.cpp  Mesh.cpp
game/: CMakeLists.txt
game/src/: Camera.hpp  Scene.cpp  Scene.hpp  Script.hpp  main.cpp
quickjs/: CMakeLists.txt
